--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Roboto Mono', monospace;
 }
 .header{
     min-height: 100vh;
@@ -28,4 +29,9 @@ nav img{
     display: inline-block;
     padding: 8px 12px;
     position: relative;
+}
+.nav-links ul li a{
+    color: #fff;
+    text-decoration: none;
+    font-size: 13px;    
 }
