--- a/style.css
+++ b/style.css
@@ -35,3 +35,83 @@ nav img{
     text-decoration: none;
     font-size: 13px;    
 }
+.nav-links ul li::after{
+    content: '';
+    width: 0%;
+    height: 2px;
+    background: #f44336;
+    display: block;
+    margin: auto;
+    transition: 0.5s;
+
+}
+.nav-links ul li:hover::after{
+    width: 100%;
+}
+.text-box{
+    width: 90%;
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    text-align: center;
+}
+.text-box h1{
+    font-size: 62px;
+}
+.text-box p{
+    margin: 10px 0 40px;
+    font-size: 14px;
+    color: #f44336;
+}
+.hero-btn{
+    display: inline;
+    text-decoration: none;
+    color: blueviolet;
+    border: 1px solid blueviolet;
+    padding: 12px 34px;
+    font-size: 13px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+    transition: 0.5s;
+}
+.hero-btn:hover{
+    background: #CAEEC2;
+}
+
+nav .fa-sharp{
+    display: none;
+}
+
+@media(max-width: 700px){
+    .text-box h1{
+        font-size: 50px;
+    }
+    .nav-links{
+        position: absolute;
+        background: #CAEEC2;
+        height: 100vh;
+        width: 200px;
+        top: 0;
+        right: -200px;
+        text-align: left;
+        z-index: 2;
+        transition: 1s;
+    }
+    .nav-links ul{
+        padding: 30px;
+    }  
+    .nav-links ul li{
+        display: block;
+    }
+
+    nav .fa-sharp{
+        display: block;
+        margin: 10px;
+        color: #fff;
+        font-size: 22px;
+        cursor: pointer;
+    }
+}
