--- a/style.css
+++ b/style.css
@@ -113,5 +113,9 @@ nav .fa-sharp{
         color: #fff;
         font-size: 22px;
         cursor: pointer;
+        
+    }
+    .hero-btn{
+        font-size: 6px;
     }
 }
