--- a/style.css
+++ b/style.css
@@ -90,6 +90,15 @@ nav .fa-sharp{
 nav .fa-solid{
     display: block;
 }
+.phone-logo{
+    display: none;
+}
+.index-text{
+    display: block;
+}
+.phone-text{
+    display: none;
+}
 
 @media(max-width: 700px){
     /*.text-box h1{
@@ -130,15 +139,33 @@ nav .fa-solid{
         display: none;
     }
 
+    .phone-logo{
+        display: block;
+        position: relative;
+        margin: auto;
+        width: auto;
+        height: auto;
+        top: 350px;
+        left: -160px;
 
-}
+    }
+    .index-text{
+        display: none;
+    }
+    .phone-text{
+        display: block;
+    }
+
+
+
+} 
 
 /* REGISTRATION */
 
 .hero{
     height: 100%;
     width: 100%;
-    background-color: #CAEEC2;
+    background-color: blueviolet;
     background-position: center;
     background-size: cover;
     position: absolute;
@@ -150,4 +177,73 @@ nav .fa-solid{
     margin: 6% auto;
     background: #fff;
     padding: 5px;
+    overflow: hidden;
+}
+.button-box{
+    width: 220px;
+    margin: 35px auto;
+    position: relative;
+    box-shadow: 0 0 20px 9px #ff61241f;
+    border-radius: 30px;
+}
+.toggle-btn{
+    padding: 10px 30px;
+    cursor: pointer;
+    background: transparent;
+    border: 0;
+    outline: none;
+    position: relative;
+}
+#btn{
+    top: 0;
+    left: 0;
+    position: absolute;
+    width: 110px;
+    height: 100%;
+    background-color: #f44336;
+    border-radius: 30px;
+    transition: 0.5s;
+}
+.input-group{
+    top: 180px;
+    position: absolute;
+    width: 280px;
+    transition: 0.5;
+}
+.input-field{
+    width: 100%;
+    padding: 10px 0;
+    margin: 5px 0;
+    border-left: 0;
+    border-top: 0;
+    border-right: 0;
+    border-bottom: 1px solid #999;
+    outline: none;
+    background: transparent;
+}
+.submit-btn{
+    width: 85%;
+    padding: 10px 30px;
+    cursor: pointer;
+    display: block;
+    margin: auto;
+    background-color: #f44336;
+    border: 0;
+    outline: none;
+    border-radius: 30px;
+}
+.check-box{
+    margin: 30px 10px 30px 0;
+}
+.span{
+    color: #777;
+    font-size: 12px;
+    bottom: 68px;
+    position: absolute;
+}
+#login{
+    left: 50px;
+}
+#register{
+    left: 450px;
 }
