--- a/CSStyle/error404.css
+++ b/CSStyle/error404.css
@@ -8,7 +8,7 @@
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/MonoSecurLogoWText.jpg);
+    background-color: rgba(4,9,30,0.7);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -22,4 +22,24 @@
     transform: translate(-50%,-50%);
     text-align: center;
     font-size: 62px;
+}
+.err-btn{
+    position: absolute;
+    top: 600px;
+    left: 700px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    background-color: #CAEEC2;
+    padding: 20px;
+    border: 0;
+    width: 300px;
+    border-radius: 30px;
+    text-decoration: none;
+    transition: .5s;
+}
+.err-btn:hover{
+    border: 5px solid blueviolet;
 }
