--- a/CSStyle/identification.css
+++ b/CSStyle/identification.css
@@ -15,6 +15,15 @@
     position: absolute;
 }
 
+nav{
+    display: flex;
+    padding: 2% 6%;
+    justify-content: space-between;
+    align-items: center;
+}
+nav img{
+    width: 150px;
+}
 .nav-links{
     flex: 1;
     text-align: right;
@@ -50,11 +59,18 @@
     position: relative;
     margin: 6% auto;
     background: #CAEEC2;
+    border: 0;
     padding: 5px;
     overflow: hidden;
     border-radius: 30px;
     top: -100px;
+    transition: 0.5s;
 }
+.form-box:hover{
+    border: 5px solid blueviolet;
+    transition: 0.5s;
+}
+
 .button-box{
     width: 220px;
     margin: 35px auto;
@@ -62,29 +78,22 @@
     border-radius: 30px;
 }
 .toggle-btn{
-    padding: 10px 30px;
-    cursor: pointer;
-    background: transparent;
+    justify-content: center;
+    align-items: center;
+    margin: 10% 35% 10% 30%;
+    padding: 10px;
+    background-color: blueviolet;
+    border-radius: 10px;
+    position: static;
     border: 0;
     outline: none;
-    position: relative;
     font-size: 12px;
-}
-#btn{
-    top: 0;
-    left: 0;
-    position: absolute;
-    width: 150px;
-    height: 100%;
-    background-color: blueviolet;
-    border-radius: 30px;
-    transition: 0.5s;
 }
 .input-group{
     top: 180px;
     position: absolute;
     width: 280px;
-    transition: 0.5;
+    transition: .5;
 }
 .input-field{
     width: 100%;
@@ -108,6 +117,30 @@
     outline: none;
     border-radius: 30px;
 }
+.log-btn{
+    position: relative;
+    top: -150px;
+    left: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 6% auto;
+    justify-content: center;
+    align-items: center;
+    background-color: blueviolet;
+    padding: 20px;
+    border: 0;
+    width: 300px;
+    border-radius: 30px;
+    font-size: 20px;
+    transition: .5s;
+    text-decoration: none;
+    color: black;
+}
+.log-btn:hover{
+    border: 5px solid #CAEEC2;
+}
+
 .check-box{
     margin: 10px 10px 30px 0;
 }
