--- a/CSStyle/foreachtest.css
+++ b/CSStyle/foreachtest.css
@@ -9,7 +9,7 @@
 .hero{
     height: 100%;
     width: 100%;
-    background-color: rgba(4,9,30,0.7);
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(https://monosecur.tk/images/MonoSecurLogoWText.jpg);
     background-position: center;
     background-size: cover;
     position: absolute;
