--- a/CSStyle/menuprincipal.css
+++ b/CSStyle/menuprincipal.css
@@ -53,6 +53,111 @@ nav img{
     width: 100%;
 }
 
+.account{
+    width: 10%;
+    height: auto;
+    position: inherit;
+    margin: 25% 1%;
+    background: #CAEEC2;
+    border: 5px solid blueviolet;
+    padding: 100px;
+    overflow: hidden;
+    border-radius: 30px;
+    top: -100px;
+    transition: 0.5s;
+}
+.account-txt{
+    width: 200px;
+    margin : 10% auto;
+    list-style-type: none;
+}
+.rea-btn{
+    display: inline;
+    text-decoration: none;
+    color: black;
+    border: 1px solid blueviolet;
+    padding: 12px 34px;
+    font-size: 13px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+    transition: 0.5s;
+}
+.rea-btn:hover{
+    background: blueviolet;
+}
+
+.list{
+    height: 500px;
+    width: 500px;
+    justify-content: center;
+    align-items: center;
+    margin: 7% 33%;
+    padding: 10px;
+    background-color: #CAEEC2;
+    border-radius: 10px;
+    position: static;
+    border: 0;
+    outline: none;
+    font-size: 12px;
+    list-style-type: none;
+    overflow: auto;
+    -ms-overflow-style: none;   /* Hide Scroll Bar for IE and Edge */
+    scrollbar-width: none;  /* Hide Scroll Bar for Firefox */
+
+}
+.list::-webkit-scrollbar{
+    display: none; /* Hide Scroll Bar for Chrome, Safari and Opera*/
+}
+
+.item{
+    height: 250px;
+    width: 500px;
+    justify-content: center;
+    align-items: center;
+    margin: 1% auto;
+    padding: 10px;
+    background-color: blueviolet;
+    border-radius: 10px;
+    position: static;
+    border: 0;
+    outline: none;
+    font-size: 12px;
+    list-style-type: none;
+    transition: .5s;
+}
+.item:hover{
+    background-color: rgb(82, 43, 187);
+    cursor: pointer;
+}
+.item:active{
+    background-color: rgb(22, 20, 161);
+}
+
+.important-item{
+    height: 250px;
+    width: 500px;
+    justify-content: center;
+    align-items: center;
+    margin: 1% auto;
+    padding: 10px;
+    background-color: rgb(180, 20, 20);
+    border-radius: 10px;
+    position: static;
+    border: 0;
+    outline: none;
+    font-size: 12px;
+    list-style-type: none;
+    transition: .5s;
+}
+.important-item:hover{
+    background-color: orange;
+    cursor: pointer;
+}
+.important-item:active{
+    background-color: yellow;
+}
+
 .form-box{
     width: 380px;
     height: 480px;
@@ -71,12 +176,6 @@ nav img{
     transition: 0.5s;
 }
 
-.button-box{
-    width: 220px;
-    margin: 35px auto;
-    position: relative;
-    border-radius: 30px;
-}
 .toggle-btn{
     justify-content: center;
     align-items: center;
@@ -88,35 +187,6 @@ nav img{
     border: 0;
     outline: none;
     font-size: 12px;
-}
-.input-group{
-    margin: 20% auto;
-    top: 180px;
-    position: absolute;
-    width: 280px;
-    transition: .5;
-}
-.input-field{
-    width: 100%;
-    padding: 10px 0;
-    margin: 5px 0;
-    border-left: 0;
-    border-top: 0;
-    border-right: 0;
-    border-bottom: 1px solid #999;
-    outline: none;
-    background: transparent;
-}
-.submit-btn{
-    width: 85%;
-    padding: 10px 30px;
-    cursor: pointer;
-    display: block;
-    margin: auto;
-    background-color: blueviolet;
-    border: 0;
-    outline: none;
-    border-radius: 30px;
 }
 .log-btn{
     position: relative;
@@ -150,10 +220,4 @@ nav img{
     font-size: 12px;
     bottom: 68px;
     position: absolute;
-}
-#login{
-    left: 50px;
-}
-#register{
-    left: 50px;
 }
