--- a/CSStyle/error404.css
+++ b/CSStyle/error404.css
@@ -8,10 +8,20 @@
 .header{
     min-height: 100vh;
     width: 100%;
-    background-color: rgba(4,9,30,0.7);
+    background-color: #030615;
     background-position: center;
     background-size: cover;
     position: relative;
+}
+.error{
+    width: 90%;
+    color: #f44336;
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    text-align: center;
+    font-size: 62px;
 }
 .text{
     width: 90%;
