--- a/CSStyle/identification/renvoyermail.css
+++ b/CSStyle/identification/renvoyermail.css
@@ -9,7 +9,7 @@
 .hero{
     height: 100%;
     width: 100%;
-    background-color: rgba(4,9,30,0.7);
+    background-color: #030615;
     background-position: center;
     background-size: cover;
     position: absolute;
