--- a/CSStyle/index.css
+++ b/CSStyle/index.css
@@ -8,7 +8,7 @@
 .header{
     min-height: 100vh;
     width: 100%;
-    background-color: rgba(4,9,30,0.7);
+    background-color: #030615;
     background-position: center;
     background-size: cover;
     position: relative;
@@ -33,6 +33,7 @@
 .logo{
     margin: 20% 40%;
     position: absolute;
+    color: white;
 }
 
 .err-btn{
